force-app/main/default/objects/Lilly_Tag_Assignment__c/Lilly_Tag_Assignment__c.object-meta.xml
<CustomObject>
    <label>Tag Assignment</label>
    <nameField>
        <displayFormat>TA-{0000000000}</displayFormat>
        <label>Tag Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>