force-app/main/default/objects/Lilly_Tag_Assignment__c/fields/Lilly_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Assigned_At__c</fullName>
    <label>Assigned At</label>
    <type>Date</type>
</CustomField>