force-app/main/default/objects/Lilly_Tag_Assignment__c/fields/Lilly_HCP_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Id__c</fullName>
    <externalId>true</externalId>
    <label>HCP Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>