force-app/main/default/objects/Lilly_Tag_Assignment__c/fields/Lilly_Tag_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Tag_Name__c</fullName>
    <formula>Tag__r.Lilly_Name__c</formula>
    <label>Tag Name</label>
    <type>Text</type>
</CustomField>