force-app/main/default/objects/Lilly_Tag_Assignment__c/fields/Lilly_Unassigned_At__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Unassigned_At__c</fullName>
    <label>Unassigned At</label>
    <type>Date</type>
</CustomField>