force-app/main/default/objects/Lilly_Tag_Assignment__c/fields/Lilly_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_User_Id__c</fullName>
    <label>User Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>