force-app/main/default/objects/Lilly_Tag_Assignment__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tag</label>
    <referenceTo>Lilly_Tag__c</referenceTo>
    <relationshipLabel>Tag Assignments</relationshipLabel>
    <relationshipName>Tag_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>